NLP TP/texts/robotics/robotics.stackexchange_0000078264.txt
Q:

Why shell is crashing using "source /opt/ros/kinetic/setup.bash" after standard installation approach with ubuntu 16.04 xenial?

Hey everyone,
recently i tried to install ros with the standard installation method from http://wiki.ros.org/kinetic/Installation/Ubuntu
with the follwing steps:
1)
sudo sh -c '. /etc/lsb-release && echo "deb http://packages.ros.org.ros.informatik.uni-freiburg.de/ros/ubuntu $DISTRIB_CODENAME main" > /etc/apt/sources.list.d/ros-latest.list'

2)
sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116

3)
sudo apt-get update

 4)
sudo apt-get install ros-kinetic-desktop-full

 5)
sudo rosdep init
rosdep update

Warning: running 'rosdep update' as root is not recommended.
You should run 'sudo rosdep fix-permissions' and invoke 'rosdep update' again without sudo.
sudo rosdep fix-permissions

 6)
echo "source /opt/ros/kinetic/setup.bash" >> ~/.bashrc
source ~/.bashrc

....and  this is what i'm encountering in my console:
File "<string>", line 1
    import os; print(os.pathsep.join([x for x in "/opt/ros/kinetic/bin:/home/inecho/bin:/home/inecho/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games" JAVA_HOME="/usr/lib/jvm/java-8-oracle/jre/bin/java:/snap/bin:/usr/lib/jvm/java-8-oracle/bin:/usr/lib/jvm/java-8-oracle/db/bin:/usr/lib/jvm/java-8-oracle/jre/bin:/home/sk/android-sdk-linux/tools:/usr/local/cuda/bin:/home/sk/android-sdk-linux/platform-tools".split(os.pathsep) if not any([d for d in ['cturtle', 'diamondback', 'electric', 'fuerte'] if d in x])]))
                                                                                                                                                                                                                  ^
SyntaxError: invalid syntax
bash: cat: No such file or directory
bash: cat: No such file or directory
bash: python: No such file or directory
bash: awk: No such file or directory
bash: grep: No such file or directory

Afterwards i am not able to type any of shell-commands like ls until i uncomment the line in ~/.bashrc again. This is what happens:
inecho@inecho-P50:~$ ls
bash: ls: No such file or directory

Does anyone has a clue whats happening there?
The last lines of my .bashrcnow with the uncommented setup.bash:
# enable programmable completion features (you don't need to enable
# this, if it's already enabled in /etc/bash.bashrc and /etc/profile
# sources /etc/bash.bashrc).
if ! shopt -oq posix; then
  if [ -f /usr/share/bash-completion/bash_completion ]; then
    . /usr/share/bash-completion/bash_completion
  elif [ -f /etc/bash_completion ]; then
    . /etc/bash_completion
  fi
fi

export PATH=${PATH}:/home/sk/android-sdk-linux/tools:/usr/local/cuda/bin
export PATH=${PATH}:/home/sk/android-sdk-linux/platform-tools
export LD_LIBRARY_PATH=/usr/local/cuda/lib64
# source /opt/ros/kinetic/setup.bash

Originally posted by rosrud on ROS Answers with karma: 23 on 2017-01-10
Post score: 2

Original comments
Comment by gvdhoorn on 2017-01-10:
Is your shell actually bash?
Also: it would probably help if you posted some lines from your .bashrc file, preferably the ones surrounding the source /opt/ros/.. line.
Comment by rosrud on 2017-01-10:
yes, my shell is bash. i double checked it with echo $SHELL.
i updated my post with the last lines of my .bashrc if it helps
Comment by Michael Johnson on 2017-01-10:
Where is your JAVA_HOME being set? What does your /etc/environment file look like? What about echo $PATH
Comment by rosrud on 2017-01-10:
my /etc/enviroment says PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games" JAVA_HOME="/usr/lib/jvm/java-8-oracle/jre/bin/java". How can i interpret this? Btw. i'm using linux for a half a year actively so i'm quite unexperienced :)
Comment by Michael Johnson on 2017-01-10:
If that is all one line, try splitting it in two and then source /etc/environment. I think that should fix it.
PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games"
JAVA_HOME="/usr/lib/jvm/java-8-oracle/jre/bin/java"

Comment by rosrud on 2017-01-10:
i changed it without any improvement. still the same error..
Comment by Michael Johnson on 2017-01-10:
Hmm, what does echo $PATH output?
Comment by rosrud on 2017-01-10:
the same as above for PATH and additionallyJAVA_HOME="/usr/lib/jvm/java-8-oracle/jre/bin/java:/snap/bin:/usr/lib/jvm/java-8-oracle/bin:/usr/lib/jvm/java-8-oracle/db/bin:/usr/lib/jvm/java-8-oracle/jre/bin:/home/sk/android-sdk-linux/tools:/usr/local/cuda/bin:/home/sk/android-sdk-linux/platform-tools
Comment by Michael Johnson on 2017-01-10:
I'm not sure I understand. For example I get this when I type the command:
$ echo $PATH
/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games

A:

So I managed to reproduce this problem by modifying my /etc/environment file to match your one line and then restarting:
PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games" JAVA_HOME="/usr/lib/jvm/java-8-oracle/jre/bin/java"

to
PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games" 
JAVA_HOME="/usr/lib/jvm/java-8-oracle/jre/bin/java"

To fix this I was able to split the line in two and then restart (relog should work as well).
This seems to be a bug in either python os library or the ROS scripts usage of it as sourcing that file should work even if they are on a single line.
p.s. if your terminal can't find the commands again you can copy/paste PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" to get them back.

Originally posted by Michael Johnson with karma: 154 on 2017-01-11
This answer was ACCEPTED on the original site
Post score: 2

Original comments
Comment by rosrud on 2017-01-11:
Thanks a lot! It worked.
It was important to perform a reboot, after i seperated the line in two rows and everything went well. So was it the python split-function which couldn't handle this?

